--- a/Training the Neural Network.ipynb
+++ b/Training the Neural Network.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -19,12 +19,13 @@
     "import tensorflow as tf\n",
     "import tensorflow.contrib.learn as learn\n",
     "import numpy as np\n",
-    "from tensorflow.contrib.learn.python.learn.metric_spec import MetricSpec\n"
+    "from tensorflow.contrib.learn.python.learn.metric_spec import MetricSpec\n",
+    "                "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -605,7 +606,7 @@
        "[150 rows x 5 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -623,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -1204,7 +1205,7 @@
        "[150 rows x 5 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1230,7 +1231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -1811,7 +1812,7 @@
        "[150 rows x 5 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1830,7 +1831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -1858,6 +1859,55 @@
     "\n",
     "# Create the x | Y -side  of the training\n",
     "x, y = to_xy(df,'species')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Split into train/test\n",
+    "x_train, x_test, y_train, y_test = train_test_split(    \n",
+    "    x, y, test_size=0.25, random_state=45)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "def get_model_dir(name,erase):\n",
+    "    base_path = os.path.join(\".\",\"dnn\")\n",
+    "    model_dir = os.path.join(base_path,name)\n",
+    "    os.makedirs(model_dir,exist_ok=True)\n",
+    "    if erase and len(model_dir)>4 and os.path.isdir(model_dir):\n",
+    "        shutil.rmtree(model_dir,ignore_errors=True) # be careful, this deletes everything below the specified path\n",
+    "    return model_dir\n",
+    "\n",
+    "# Get/clear a directory to store the neural network to\n",
+    "model_dir = get_model_dir('iris',True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Create a deep neural network with 3 hidden layers of 10, 20, 5\n",
+    "feature_columns = [tf.contrib.layers.real_valued_column(\"\", dimension=x.shape[0])]\n",
+    "classifier = learn.DNNClassifier(\n",
+    "    model_dir= model_dir,\n",
+    "    config=tf.contrib.learn.RunConfig(save_checkpoints_secs=1),\n",
+    "    hidden_units=[10, 20, 5], n_classes=num_classes, feature_columns=feature_columns)\n"
    ]
   }
  ],
