--- a/Training the Neural Network.ipynb
+++ b/Training the Neural Network.ipynb
@@ -1896,11 +1896,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Using config: {'keep_checkpoint_every_n_hours': 10000, '_evaluation_master': '', 'tf_random_seed': None, 'save_summary_steps': 100, '_environment': 'local', '_master': '', 'save_checkpoints_secs': 1, '_task_id': 0, '_is_chief': True, '_cluster_spec': <tensorflow.python.training.server_lib.ClusterSpec object at 0x7f4963429f60>, '_task_type': None, 'keep_checkpoint_max': 5, 'tf_config': gpu_options {\n",
+      "  per_process_gpu_memory_fraction: 1.0\n",
+      "}\n",
+      ", '_num_ps_replicas': 0, 'save_checkpoints_steps': None}\n"
+     ]
+    }
+   ],
    "source": [
     "# Create a deep neural network with 3 hidden layers of 10, 20, 5\n",
     "feature_columns = [tf.contrib.layers.real_valued_column(\"\", dimension=x.shape[0])]\n",
@@ -1908,6 +1919,239 @@
     "    model_dir= model_dir,\n",
     "    config=tf.contrib.learn.RunConfig(save_checkpoints_secs=1),\n",
     "    hidden_units=[10, 20, 5], n_classes=num_classes, feature_columns=feature_columns)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From /home/irfanalidv/anaconda2/envs/py35/lib/python3.5/site-packages/tensorflow/contrib/learn/python/learn/monitors.py:322 in __init__.: BaseMonitor.__init__ (from tensorflow.contrib.learn.python.learn.monitors) is deprecated and will be removed after 2016-12-05.\n",
+      "Instructions for updating:\n",
+      "Monitors are deprecated. Please use tf.train.SessionRunHook.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Early stopping\n",
+    "validation_monitor = tf.contrib.learn.monitors.ValidationMonitor(\n",
+    "    x_test,\n",
+    "    y_test,\n",
+    "    every_n_steps=500,\n",
+    "    #metrics=validation_metrics,\n",
+    "    early_stopping_metric=\"loss\",\n",
+    "    early_stopping_metric_minimize=True,\n",
+    "    early_stopping_rounds=50)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From /home/irfanalidv/anaconda2/envs/py35/lib/python3.5/site-packages/tensorflow/contrib/learn/python/learn/estimators/dnn.py:315 in fit.: calling BaseEstimator.fit (from tensorflow.contrib.learn.python.learn.estimators.estimator) with x is deprecated and will be removed after 2016-12-01.\n",
+      "Instructions for updating:\n",
+      "Estimator is decoupled from Scikit Learn interface by moving into\n",
+      "separate class SKCompat. Arguments x, y and batch_size are only\n",
+      "available in the SKCompat class, Estimator will only accept input_fn.\n",
+      "Example conversion:\n",
+      "  est = Estimator(...) -> est = SKCompat(Estimator(...))\n",
+      "WARNING:tensorflow:From /home/irfanalidv/anaconda2/envs/py35/lib/python3.5/site-packages/tensorflow/contrib/learn/python/learn/estimators/dnn.py:315 in fit.: calling BaseEstimator.fit (from tensorflow.contrib.learn.python.learn.estimators.estimator) with y is deprecated and will be removed after 2016-12-01.\n",
+      "Instructions for updating:\n",
+      "Estimator is decoupled from Scikit Learn interface by moving into\n",
+      "separate class SKCompat. Arguments x, y and batch_size are only\n",
+      "available in the SKCompat class, Estimator will only accept input_fn.\n",
+      "Example conversion:\n",
+      "  est = Estimator(...) -> est = SKCompat(Estimator(...))\n",
+      "WARNING:tensorflow:From /home/irfanalidv/anaconda2/envs/py35/lib/python3.5/site-packages/tensorflow/contrib/learn/python/learn/estimators/dnn.py:315 in fit.: calling BaseEstimator.fit (from tensorflow.contrib.learn.python.learn.estimators.estimator) with batch_size is deprecated and will be removed after 2016-12-01.\n",
+      "Instructions for updating:\n",
+      "Estimator is decoupled from Scikit Learn interface by moving into\n",
+      "separate class SKCompat. Arguments x, y and batch_size are only\n",
+      "available in the SKCompat class, Estimator will only accept input_fn.\n",
+      "Example conversion:\n",
+      "  est = Estimator(...) -> est = SKCompat(Estimator(...))\n",
+      "INFO:tensorflow:Summary name dnn/hiddenlayer_0:fraction_of_zero_values is illegal; using dnn/hiddenlayer_0_fraction_of_zero_values instead.\n",
+      "INFO:tensorflow:Summary name dnn/hiddenlayer_0:activation is illegal; using dnn/hiddenlayer_0_activation instead.\n",
+      "INFO:tensorflow:Summary name dnn/hiddenlayer_1:fraction_of_zero_values is illegal; using dnn/hiddenlayer_1_fraction_of_zero_values instead.\n",
+      "INFO:tensorflow:Summary name dnn/hiddenlayer_1:activation is illegal; using dnn/hiddenlayer_1_activation instead.\n",
+      "INFO:tensorflow:Summary name dnn/hiddenlayer_2:fraction_of_zero_values is illegal; using dnn/hiddenlayer_2_fraction_of_zero_values instead.\n",
+      "INFO:tensorflow:Summary name dnn/hiddenlayer_2:activation is illegal; using dnn/hiddenlayer_2_activation instead.\n",
+      "INFO:tensorflow:Summary name dnn/logits:fraction_of_zero_values is illegal; using dnn/logits_fraction_of_zero_values instead.\n",
+      "INFO:tensorflow:Summary name dnn/logits:activation is illegal; using dnn/logits_activation instead.\n",
+      "INFO:tensorflow:Create CheckpointSaverHook.\n",
+      "INFO:tensorflow:loss = 1.07145, step = 1\n",
+      "INFO:tensorflow:Saving checkpoints for 1 into ./dnn/iris/model.ckpt.\n",
+      "WARNING:tensorflow:*******************************************************\n",
+      "WARNING:tensorflow:TensorFlow's V1 checkpoint format has been deprecated.\n",
+      "WARNING:tensorflow:Consider switching to the more efficient V2 format:\n",
+      "WARNING:tensorflow:   `tf.train.Saver(write_version=tf.train.SaverDef.V2)`\n",
+      "WARNING:tensorflow:now on by default.\n",
+      "WARNING:tensorflow:*******************************************************\n",
+      "INFO:tensorflow:loss = 0.218818, step = 101\n",
+      "INFO:tensorflow:global_step/sec: 374.007\n",
+      "INFO:tensorflow:loss = 0.0897297, step = 201\n",
+      "INFO:tensorflow:global_step/sec: 632.789\n",
+      "INFO:tensorflow:loss = 0.0482916, step = 301\n",
+      "INFO:tensorflow:global_step/sec: 470.312\n",
+      "INFO:tensorflow:loss = 0.0329476, step = 401\n",
+      "INFO:tensorflow:global_step/sec: 443.433\n",
+      "INFO:tensorflow:Saving checkpoints for 465 into ./dnn/iris/model.ckpt.\n",
+      "WARNING:tensorflow:*******************************************************\n",
+      "WARNING:tensorflow:TensorFlow's V1 checkpoint format has been deprecated.\n",
+      "WARNING:tensorflow:Consider switching to the more efficient V2 format:\n",
+      "WARNING:tensorflow:   `tf.train.Saver(write_version=tf.train.SaverDef.V2)`\n",
+      "WARNING:tensorflow:now on by default.\n",
+      "WARNING:tensorflow:*******************************************************\n",
+      "WARNING:tensorflow:From /home/irfanalidv/anaconda2/envs/py35/lib/python3.5/site-packages/tensorflow/contrib/learn/python/learn/estimators/dnn.py:323 in evaluate.: calling BaseEstimator.evaluate (from tensorflow.contrib.learn.python.learn.estimators.estimator) with x is deprecated and will be removed after 2016-12-01.\n",
+      "Instructions for updating:\n",
+      "Estimator is decoupled from Scikit Learn interface by moving into\n",
+      "separate class SKCompat. Arguments x, y and batch_size are only\n",
+      "available in the SKCompat class, Estimator will only accept input_fn.\n",
+      "Example conversion:\n",
+      "  est = Estimator(...) -> est = SKCompat(Estimator(...))\n",
+      "WARNING:tensorflow:From /home/irfanalidv/anaconda2/envs/py35/lib/python3.5/site-packages/tensorflow/contrib/learn/python/learn/estimators/dnn.py:323 in evaluate.: calling BaseEstimator.evaluate (from tensorflow.contrib.learn.python.learn.estimators.estimator) with y is deprecated and will be removed after 2016-12-01.\n",
+      "Instructions for updating:\n",
+      "Estimator is decoupled from Scikit Learn interface by moving into\n",
+      "separate class SKCompat. Arguments x, y and batch_size are only\n",
+      "available in the SKCompat class, Estimator will only accept input_fn.\n",
+      "Example conversion:\n",
+      "  est = Estimator(...) -> est = SKCompat(Estimator(...))\n",
+      "WARNING:tensorflow:From /home/irfanalidv/anaconda2/envs/py35/lib/python3.5/site-packages/tensorflow/contrib/learn/python/learn/estimators/dnn.py:323 in evaluate.: calling BaseEstimator.evaluate (from tensorflow.contrib.learn.python.learn.estimators.estimator) with batch_size is deprecated and will be removed after 2016-12-01.\n",
+      "Instructions for updating:\n",
+      "Estimator is decoupled from Scikit Learn interface by moving into\n",
+      "separate class SKCompat. Arguments x, y and batch_size are only\n",
+      "available in the SKCompat class, Estimator will only accept input_fn.\n",
+      "Example conversion:\n",
+      "  est = Estimator(...) -> est = SKCompat(Estimator(...))\n",
+      "INFO:tensorflow:Summary name dnn/hiddenlayer_0:fraction_of_zero_values is illegal; using dnn/hiddenlayer_0_fraction_of_zero_values instead.\n",
+      "INFO:tensorflow:Summary name dnn/hiddenlayer_0:activation is illegal; using dnn/hiddenlayer_0_activation instead.\n",
+      "INFO:tensorflow:Summary name dnn/hiddenlayer_1:fraction_of_zero_values is illegal; using dnn/hiddenlayer_1_fraction_of_zero_values instead.\n",
+      "INFO:tensorflow:Summary name dnn/hiddenlayer_1:activation is illegal; using dnn/hiddenlayer_1_activation instead.\n",
+      "INFO:tensorflow:Summary name dnn/hiddenlayer_2:fraction_of_zero_values is illegal; using dnn/hiddenlayer_2_fraction_of_zero_values instead.\n",
+      "INFO:tensorflow:Summary name dnn/hiddenlayer_2:activation is illegal; using dnn/hiddenlayer_2_activation instead.\n",
+      "INFO:tensorflow:Summary name dnn/logits:fraction_of_zero_values is illegal; using dnn/logits_fraction_of_zero_values instead.\n",
+      "INFO:tensorflow:Summary name dnn/logits:activation is illegal; using dnn/logits_activation instead.\n",
+      "INFO:tensorflow:Restored model from ./dnn/iris\n",
+      "INFO:tensorflow:Eval steps [0,inf) for training step 465.\n",
+      "INFO:tensorflow:Input iterator is exhausted.\n",
+      "INFO:tensorflow:Saving evaluation summary for step 465: accuracy = 0.973684, loss = 0.107866\n",
+      "INFO:tensorflow:Validation (step 500): global_step = 465, accuracy = 0.973684, loss = 0.107866\n",
+      "INFO:tensorflow:loss = 0.0252294, step = 501\n",
+      "INFO:tensorflow:global_step/sec: 123.927\n",
+      "INFO:tensorflow:loss = 0.0204662, step = 601\n",
+      "INFO:tensorflow:global_step/sec: 524.815\n",
+      "INFO:tensorflow:Saving checkpoints for 679 into ./dnn/iris/model.ckpt.\n",
+      "WARNING:tensorflow:*******************************************************\n",
+      "WARNING:tensorflow:TensorFlow's V1 checkpoint format has been deprecated.\n",
+      "WARNING:tensorflow:Consider switching to the more efficient V2 format:\n",
+      "WARNING:tensorflow:   `tf.train.Saver(write_version=tf.train.SaverDef.V2)`\n",
+      "WARNING:tensorflow:now on by default.\n",
+      "WARNING:tensorflow:*******************************************************\n",
+      "INFO:tensorflow:loss = 0.0171362, step = 701\n",
+      "INFO:tensorflow:global_step/sec: 443.596\n",
+      "INFO:tensorflow:loss = 0.0145132, step = 801\n",
+      "INFO:tensorflow:global_step/sec: 527.395\n",
+      "INFO:tensorflow:loss = 0.0123654, step = 901\n",
+      "INFO:tensorflow:global_step/sec: 526.086\n",
+      "WARNING:tensorflow:From /home/irfanalidv/anaconda2/envs/py35/lib/python3.5/site-packages/tensorflow/contrib/learn/python/learn/estimators/dnn.py:323 in evaluate.: calling BaseEstimator.evaluate (from tensorflow.contrib.learn.python.learn.estimators.estimator) with x is deprecated and will be removed after 2016-12-01.\n",
+      "Instructions for updating:\n",
+      "Estimator is decoupled from Scikit Learn interface by moving into\n",
+      "separate class SKCompat. Arguments x, y and batch_size are only\n",
+      "available in the SKCompat class, Estimator will only accept input_fn.\n",
+      "Example conversion:\n",
+      "  est = Estimator(...) -> est = SKCompat(Estimator(...))\n",
+      "WARNING:tensorflow:From /home/irfanalidv/anaconda2/envs/py35/lib/python3.5/site-packages/tensorflow/contrib/learn/python/learn/estimators/dnn.py:323 in evaluate.: calling BaseEstimator.evaluate (from tensorflow.contrib.learn.python.learn.estimators.estimator) with y is deprecated and will be removed after 2016-12-01.\n",
+      "Instructions for updating:\n",
+      "Estimator is decoupled from Scikit Learn interface by moving into\n",
+      "separate class SKCompat. Arguments x, y and batch_size are only\n",
+      "available in the SKCompat class, Estimator will only accept input_fn.\n",
+      "Example conversion:\n",
+      "  est = Estimator(...) -> est = SKCompat(Estimator(...))\n",
+      "WARNING:tensorflow:From /home/irfanalidv/anaconda2/envs/py35/lib/python3.5/site-packages/tensorflow/contrib/learn/python/learn/estimators/dnn.py:323 in evaluate.: calling BaseEstimator.evaluate (from tensorflow.contrib.learn.python.learn.estimators.estimator) with batch_size is deprecated and will be removed after 2016-12-01.\n",
+      "Instructions for updating:\n",
+      "Estimator is decoupled from Scikit Learn interface by moving into\n",
+      "separate class SKCompat. Arguments x, y and batch_size are only\n",
+      "available in the SKCompat class, Estimator will only accept input_fn.\n",
+      "Example conversion:\n",
+      "  est = Estimator(...) -> est = SKCompat(Estimator(...))\n",
+      "INFO:tensorflow:Summary name dnn/hiddenlayer_0:fraction_of_zero_values is illegal; using dnn/hiddenlayer_0_fraction_of_zero_values instead.\n",
+      "INFO:tensorflow:Summary name dnn/hiddenlayer_0:activation is illegal; using dnn/hiddenlayer_0_activation instead.\n",
+      "INFO:tensorflow:Summary name dnn/hiddenlayer_1:fraction_of_zero_values is illegal; using dnn/hiddenlayer_1_fraction_of_zero_values instead.\n",
+      "INFO:tensorflow:Summary name dnn/hiddenlayer_1:activation is illegal; using dnn/hiddenlayer_1_activation instead.\n",
+      "INFO:tensorflow:Summary name dnn/hiddenlayer_2:fraction_of_zero_values is illegal; using dnn/hiddenlayer_2_fraction_of_zero_values instead.\n",
+      "INFO:tensorflow:Summary name dnn/hiddenlayer_2:activation is illegal; using dnn/hiddenlayer_2_activation instead.\n",
+      "INFO:tensorflow:Summary name dnn/logits:fraction_of_zero_values is illegal; using dnn/logits_fraction_of_zero_values instead.\n",
+      "INFO:tensorflow:Summary name dnn/logits:activation is illegal; using dnn/logits_activation instead.\n",
+      "INFO:tensorflow:Restored model from ./dnn/iris\n",
+      "INFO:tensorflow:Eval steps [0,inf) for training step 679.\n",
+      "INFO:tensorflow:Input iterator is exhausted.\n",
+      "INFO:tensorflow:Saving evaluation summary for step 679: accuracy = 0.973684, loss = 0.129121\n",
+      "INFO:tensorflow:Validation (step 1000): global_step = 679, accuracy = 0.973684, loss = 0.129121\n",
+      "INFO:tensorflow:Stopping. Best step: 500 with loss = 0.1078663095831871.\n",
+      "INFO:tensorflow:Saving checkpoints for 1000 into ./dnn/iris/model.ckpt.\n",
+      "WARNING:tensorflow:*******************************************************\n",
+      "WARNING:tensorflow:TensorFlow's V1 checkpoint format has been deprecated.\n",
+      "WARNING:tensorflow:Consider switching to the more efficient V2 format:\n",
+      "WARNING:tensorflow:   `tf.train.Saver(write_version=tf.train.SaverDef.V2)`\n",
+      "WARNING:tensorflow:now on by default.\n",
+      "WARNING:tensorflow:*******************************************************\n",
+      "INFO:tensorflow:Loss for final step: 0.0104561.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<tensorflow.contrib.learn.python.learn.estimators.dnn.DNNClassifier at 0x7f4963429f98>"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Fit/train neural network\n",
+    "classifier.fit(x_train, y_train,monitors=[validation_monitor],steps=10000)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy score: 0.9473684210526315\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn import metrics\n",
+    "\n",
+    "# Set the desired TensorFlow output level \n",
+    "tf.logging.set_verbosity(tf.logging.ERROR)\n",
+    "\n",
+    "# Evaluate success using accuracy\n",
+    "pred = list(classifier.predict(x_test, as_iterable=True))\n",
+    "score = metrics.accuracy_score(y_test, pred)\n",
+    "print(\"Accuracy score: {}\".format(score))"
    ]
   }
  ],
