--- a/Binary Classification.ipynb
+++ b/Binary Classification.ipynb
@@ -6697,6 +6697,34 @@
     "\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "##ROC\n",
+    "from sklearn.metrics import roc_curve, auc\n",
+    "\n",
+    "# Plot an ROC. pred - the predictions, y - the expected output.\n",
+    "def plot_roc(pred,y):\n",
+    "    fpr, tpr, _ = roc_curve(y_test, pred)\n",
+    "    roc_auc = auc(fpr, tpr)\n",
+    "\n",
+    "    plt.figure()\n",
+    "    plt.plot(fpr, tpr, label='ROC curve (area = %0.2f)' % roc_auc)\n",
+    "    plt.plot([0, 1], [0, 1], 'k--')\n",
+    "    plt.xlim([0.0, 1.0])\n",
+    "    plt.ylim([0.0, 1.05])\n",
+    "    plt.xlabel('False Positive Rate')\n",
+    "    plt.ylabel('True Positive Rate')\n",
+    "    plt.title('Receiver Operating Characteristic (ROC)')\n",
+    "    plt.legend(loc=\"lower right\")\n",
+    "    plt.show()"
+   ]
   }
  ],
  "metadata": {
