Defining convolutional neural network  #15

--- a/Convolutional Neural Networks.ipynb
+++ b/Convolutional Neural Networks.ipynb
@@ -44,7 +44,9 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "#Defining convolutional neural network\n"
+   ]
   }
  ],
  "metadata": {
