--- a/Regularization.ipynb
+++ b/Regularization.ipynb
@@ -213,6 +213,141 @@
     "  regressor.coef_[0,:],\n",
     "  regressor.intercept_)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Final score (RMSE): 3.0409047603607178\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>coef</th>\n",
+       "      <th>positive</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>origin-1</th>\n",
+       "      <td>-1.264483</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>weight</th>\n",
+       "      <td>-0.007458</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>horsepower</th>\n",
+       "      <td>-0.002799</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>cylinders</th>\n",
+       "      <td>-0.000000</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>origin-2</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>origin-3</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>displacement</th>\n",
+       "      <td>0.013005</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>acceleration</th>\n",
+       "      <td>0.113755</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>year</th>\n",
+       "      <td>0.787194</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  coef positive\n",
+       "origin-1     -1.264483    False\n",
+       "weight       -0.007458    False\n",
+       "horsepower   -0.002799    False\n",
+       "cylinders    -0.000000     True\n",
+       "origin-2      0.000000     True\n",
+       "origin-3      0.000000     True\n",
+       "displacement  0.013005     True\n",
+       "acceleration  0.113755     True\n",
+       "year          0.787194     True"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Intercept: [-17.27110481]\n"
+     ]
+    },
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAasAAAD8CAYAAADJ7YuWAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAHchJREFUeJzt3XmcXGWd7/HPl10IQjDRQQQDiGZAJZICQUBRuSAMQhjC\nAC7DHvW6gNx4r75cRhkZtxnRqy/FGDXgMKBgoogLixACkUC6QzbAsHNHLmIjiAQvgQnf+0c9jZW2\nl+ruqu7Tne/79epXnXrOc8751dOd/uY5dbqObBMREVFlm4x2AREREQNJWEVEROUlrCIiovISVhER\nUXkJq4iIqLyEVUREVF7CKiIiKi9hFRERlZewioiIyttstAsYLyZNmuQpU6aMdhkREWNGZ2fno7Yn\nN9M3YdUiU6ZMoaOjY7TLiIgYMyQ92GzfnAaMiIjKS1hFRETlJawiIqLyElYREVF5ucAiIlpOGu0K\nYiSM5O0QM7OKiIjKS1hFRETlJawiIqLyElZNkrTpaNcQEbGxGpdhJelcSWc3PD9P0lmSPiJpqaSV\nkj7TsP7Hkjol3S5pVkP7Wkn/JmkFcMAIv4yIiCjGZVgB3wX+EUDSJsCJwO+APYD9gGnAdElvLP1P\nsz0dqAEfkvSi0r4NcIvtvW3f1PMgkmZJ6pDU0dXV1d5XFBGxERuXYWX7AeAPkl4HHAbcBuzbsLwM\nmEo9vKAeUCuAJcDODe3rgR/1c5w5tmu2a5MnN/VZjBERMQTj+e+s5gKnAH9Dfab1VuBztr/V2EnS\nIcChwAG2/yxpIbBVWf207fUjVXBERPRuXM6sigXA26jPqK4qX6dJmgAgaSdJLwa2Ax4vQTUV2H+0\nCo6IiN6N25mV7WckXQ/8scyOrpb0t8DNqv95/VrgXcAvgfdKuhNYQ/1UYEREVMi4DatyYcX+wPHd\nbba/Cny1l+5H9LYP2xPaU11ERAzGuAwrSXsCVwILbN892vVEbGxG8jPjYuMwLsPK9h3AbqNdR0RE\ntMZ4vsAiIiLGiYRVRERUXsIqIiIqL2EVERGVl7CKiIjKS1hFRETlJawiIqLyElYREVF5CauIiKi8\nhFVERFRewioiIipvXH42YESMrvpdeIYvH4gb3TKzioiIyqtkWElaKKnWon3NKLcM6X5+rqRDW7Hv\niIgYGZUMq8GStGk/q2cAz4eV7U/Zvrb9VUVERKsMK6wk/VhSp6TbJc0qbW+TtEzSCkm/Km0TJH1P\n0ipJKyUdV9oPk3Rz6X+ZpL+6M29ffSQ9IOkLkpYBx0s6U9LSctwfSdpa0huAo4EvSVouaXdJ8yTN\nLPt4q6TbSl3flbRlw74/U465StLU4YxTREQMz3BnVqfZng7UgA9JegnwbeA423vzl1vKfxJ4wvZr\nbL8WuE7SJOATwKG29wE6gHMad95Enz/Y3sf2pcB82/uW494JnG7718AVwEdsT7N9b8O+twLmASfY\nfg31i03e17DvR8sxvwnMHuY4RUTEMAz3asAPSTq2LO8MzAIW2b4fwPZjZd2hwIndG9l+XNJR1E/P\nLVb90qEtgJt77H//Afr8oGH51ZI+C2wPTACuGqD2VwH3276rPL8QeD/wlfJ8fnnsBP6+tx2U2eQs\ngF122WWAw0VExFANOawkHUI9hA6w/WdJC4HlQLOnzARcY/ukYfR5qmF5HjDD9gpJpwCHNFlHX9aV\nx/X0MU625wBzAGq1Wi6yjYhok+GcBtwOeLwE1VTqs6CtgDdK2hVA0g6l7zXUZy2U9onAEuBASa8o\nbdtIemWPYzTTp9u2wMOSNgfe2dD+ZFnX0xpgSve+gXcDNzTxuiMiYoQNJ6x+CWwm6U7g89SDpYv6\nabH5klbwl9N0nwUmSlpd2t9suws4BbhE0krqp/c2mJU106fBJ4FbgMXAbxraLwU+Ui6k2L1h308D\npwKXSVoFPAdcMJSBiIiI9pLzJ+ItUavV3NHRMdplRFRCPsEimiGp03ZTf1M7Lv7OKiIixrd8NmBE\ntFxmRNFqmVlFRETlJawiIqLyElYREVF5CauIiKi8hFVERFRewioiIiovYRUREZWXsIqIiMpLWEVE\nROUlrCIiovISVhERUXkJq4hoOal1n7weAQmriIgYAwb9qeuSPg2sBV4ILLJ97SC3PwSYbfuowR57\npEmaAdxl+47RriUiYmM25JmV7U8NNqjGoBnAnqNdRETExq6psJL0cUl3SboJeFVpmydpZln+vKQ7\nJK2U9K8N6y+Q1FG2/auZlKT9JN1cbjn/a0nd+95U0r9KWl32+cHSPl3SDZI6JV0lacfSvlDS+eVY\nd0raV9J8SXdL+mzD8d4l6VZJyyV9S9KmpX2tpPMkrZC0RNJLJL0BOBr4Uum/+zDGOSIihmHA04CS\npgMnAtNK/2VAZ8P6FwHHAlNtW9L2DZtPAfYDdgeul/SKHrv/DXCw7f+SdCjwL8BxwKyy7bSybgdJ\nmwNfA46x3SXpBOA84LSyr2ds1ySdBfwEmA48Btwr6XzgxcAJwIG2n5X0DeCdwEXANsAS2x+X9EXg\nTNuflXQFcKXtywcap4iIaJ9m3rM6GFhg+88A5Rd4oyeAp4HvSLoSuLJh3Q9tPwfcLek+YGqPbbcD\nLpS0B2Bg89J+KHCB7f8CsP2YpFcDrwauUf0yo02Bhxv21V3XKuB22w+Xeu8DdgYOoh5gS8v2LwB+\nX7Z5pqHuTuC/NTEuSJpFPVjZZZddmtkkIiKGYNi3tS8zn/2AtwIzgQ8Ab+le3bN7j+f/DFxv+1hJ\nU4CF/RxK1EPogD7WryuPzzUsdz/frGx/oe2P9bLts/bzN+JeT5PjYnsOMAegVqvlRt4REW3SzHtW\ni4AZkl4gaVvg7Y0rJU0AtrP9c+DDwN4Nq4+XtEl5v2c3YE2PfW8HPFSWT2lovwZ4j6TNyjF2KNtO\nlnRAadtc0l5N1N/tV8BMSS/u3qeklw+wzZPAtoM4RkREtMGAYWV7GfADYAXwC2Bpjy7bAldKWgnc\nBJzTsO7/ALeW7d5r++ke234R+Jyk29hwNjO3bLtS0grgHbafoT5z+0JpWw68oalXWX8ddwCfAK4u\ntV4D7DjAZpcCHykXgOQCi4iIUaK/nP1q8Y6leWxEFyfUajV3dHSMdhkRldD96RVt+vUS44SkTtu1\nZvrmEywiIqLyhn2BRV9sn9KufUdEtWVGFa2WmVVERFRewioiIiovYRUREZWXsIqIiMpLWEVEROUl\nrCIiovISVhERUXkJq4iIqLyEVUREVF7CKiIiKi9hFRERlZewioiIyktYRURE5Y3psJL0c0nbD9Dn\nXEmHDnK/35G0QtJKSZeXuyFHRMQoGZNhpbpNbB9p+4/99bX9KdvXDvIQH7a9t+3XUr9j8QeGXGxE\nRAxbZcNK0jmSVpevsyVNkbRG0kXAamBnSQ9ImlT6f7Ksv0nSJZJml/Z5kmaW5QckfUbSMkmrJE3t\n7di2/1T6C3gBkLvzRESMokqGlaTpwKnA64H9gTOBicAewDds72X7wYb++wLHAXsDRwD93Sb5Udv7\nAN8EZvdTw/eA3wFTga8N6wVFRMSwVDKsgIOABbafsr0WmA8cDDxoe0kv/Q8EfmL7adtPAj/tZ9/z\ny2MnMKWvTrZPBV4K3Amc0FsfSbMkdUjq6OrqGug1RUTEEFU1rPryVAv2sa48rgc2A5B0laTlkuY2\ndrS9HriU+qztr9ieY7tmuzZ58uQWlBYREb2paljdCMyQtLWkbYBjS1tfFgNvl7RVuXLvqMEczPbh\ntqfZPqNcvPEKeP49q6OB3wztZURERCtsNtoF9Mb2MknzgFtL01zg8X76L5V0BbASeARYBTwxxMML\nuFDSC8vyCuB9Q9xXRES0gOzxcaGbpAm210raGlgEzLK9bKSOX6vV3NHRMVKHi4gY8yR12u7vgrjn\nVXJmNURzJO0JbAVcOJJBFRER7TVuwsr2O0a7hoiIaI+qXmARERHxvIRVRERUXsIqIiIqL2EVERGV\nl7CKiIjKS1hFRETlJawiIqLyElYREVF5CauIiKi8hFVERFRewioiIiovYRUREZWXsIqIiMobs2El\n6eeSth+gz7mSDh3kfi+WtEbSaknflbT58CqNiIjhGnNhVW47v4ntI23/sb++tj9l+9pBHuJiYCrw\nGuAFwBlDLDUiIlqkkmEl6Zwys1kt6WxJU8ps5yJgNbCzpAckTSr9P1nW3yTpEkmzS/s8STPL8gOS\nPiNpmaRVkqb2dmzbP3cB3Aq8bGRedURE9KVyYSVpOnAq8Hpgf+BMYCKwB/AN23vZfrCh/77AccDe\nwBFAf7dIftT2PsA3gdkD1LE58G7gl0N/NRER0QqVCyvgIGCB7adsrwXmAwcDD9pe0kv/A4Gf2H7a\n9pPAT/vZ9/zy2AlMGaCObwCLbN/YVwdJsyR1SOro6uoaYHcRETFUVQyrvjzVgn2sK4/rgc0AJF0l\nabmkud2dJP0TMBk4p7+d2Z5ju2a7Nnny5BaUFxERvaliWN0IzJC0taRtgGNLW18WA2+XtJWkCcBR\ngzmY7cNtT7N9BoCkM4DDgZNsPze0lxAREa202WgX0JPtZZLmUb+4AWAu8Hg//ZdKugJYCTwCrAKe\nGEYJFwAPAjdLAphv+9xh7C8iIoZJ9YvexjZJE2yvlbQ1sAiYZXvZSNZQq9Xc0dExkoeMiBjTJHXa\n7u+iuOdVbmY1RHMk7QlsBVw40kEVERHtNS7CyvY7RruGiIhonypeYBEREbGBhFVERFRewioiIiov\nYRUREZWXsIqIiMpLWEVEROUlrCIiovISVhERUXkJq4iIqLyEVUREVF7CKiIiKi9hFRERlZewioiI\nyktYRURE5Y2JsJI0T9LMsjy33LtqMNuvbU9lERExEsbc/axsn9HO/at+L3vZfq6dx4mIiOaN6sxK\n0j9KWilphaQFku6XtHlZ98LG5w3bLJRUK8trJZ1Xtl8i6SWlfVdJN0taJemzPbb/iKSl5bifKW1T\nJK2RdBGwGti5zOZWl318eCTGIyIiejdqYSVpL+ATwFts7w2cDiwE/q50ORGYb/vZfnazDbCkbL8I\nOLO0fxX4pu3XAA83HPMwYA9gP2AaMF3SG8vqPYBv2N4LmATsZPvVZR/f6+M1zJLUIamjq6trcAMQ\nERFNG82Z1VuAy2w/CmD7MWAucGpZfyp9hESDZ4Ary3InMKUsHwhcUpa/39D/sPJ1G7AMmEo9pAAe\ntL2kLN8H7Cbpa5LeBvypt4PbnmO7Zrs2efLkAUqNiIihqtR7VrYXl1NyhwCb2l49wCbP2nZZXs+G\nr8e99BfwOdvf2qBRmgI81VDH45L2Bg4H3gv8A3DaIF5KRES00GjOrK4Djpf0IgBJO5T2i4D/YOBZ\nVX8WUz+NCPDOhvargNMkTSjH3EnSi3tuLGkSsIntH1E/VbnPMGqJiIhhGrWwsn07cB5wg6QVwJfL\nqouBifzlNN5QnAW8X9IqYKeGY15NPQhvLusuB7btZfudgIWSlgP/DnxsGLVERMQw6S9n0aqh/D3V\nMbbfPdq1DEatVnNHR8dolxERMWZI6rRda6Zvpd6zkvQ14AjgyNGuJSIiqqNSYWX7g6NdQ0REVM+Y\n+LiliIjYuCWsIiKi8hJWERFReQmriIiovIRVRERUXsIqIiIqL2EVERGVl7CKiIjKS1hFRETlJawi\nIqLyElYREVF5CauIiKi8hFVERFReS8Kq3Ip+oFvQR0REDMmoz6wkVeo2JX0ZK3VGRIxHrQyrTSV9\nW9Ltkq6W9AJJ0yQtkbRS0gJJEwEkLZT0FUkdwFmSjpe0WtIKSYtKn00lfUnS0rL9e0r7IZIWSfqZ\npDWSLpC0SVl3kqRVZV9fKG3HS/pyWT5L0n1leTdJi8vydEk3SOqUdJWkHXurs4VjFRERg9DK2cIe\nwEm2z5T0Q+A44H8CH7R9g6RzgX8Czi79t+i+nbGkVcDhth+StH1ZfzrwhO19JW0JLJZ0dVm3H7An\n8CDwS+DvJf0a+AIwHXgcuFrSDODGUgfAwcAfJO1UlhdJ2hz4GnCM7S5JJwDnAaf1rLMnSbOAWQC7\n7LLLUMctIiIG0Mqwut/28rLcCewObG/7htJ2IXBZQ/8fNCwvBuaVkJtf2g4DXitpZnm+HfVAfAa4\n1Xb3DOkS4CDgWWCh7a7SfjHwRts/ljRB0rbAzsB/AG+kHlbzgVcBrwaukQSwKfBwH3VuwPYcYA5A\nrVZz/8MTERFD1cqwWtewvB7Yvq+OxVPdC7bfK+n1wN8BnZKmA6I+K7uqcSNJhwA9g2GgoPg1cCqw\nhvpM6zTgAOB/ALsAt9s+YKA6IyJidLTzAosngMclHVyevxu4obeOkna3fYvtTwFd1GdAVwHvK6fp\nkPRKSduUTfaTtGt5r+oE4CbgVuBNkiZJ2hQ4qeF4NwKzgUXAbcCbgXW2n6AeYJMlHVCOs7mkvVo3\nDBERMVztvsLtZOACSVsD91Gf3fTmS5L2oD6b+hWwAlgJTAGWqX5+rguYUfovBb4OvAK4Hlhg+zlJ\nHy3PBfzM9k9K/xupB+Ai2+sl/SfwGwDbz5RTjf9b0nbUx+QrwO0tGoOIiBgm2WPrrZZyGnC27aNG\nu5ZGtVrNHR0do11GRMSYIamzrwvYehr1v7OKiIgYyJj7Q1fbC4GFo1xGRESMoMysIiKi8hJWERFR\neQmriIiovIRVRERUXsIqIiIqL2EVERGVl7CKiIjKS1hFRETlJawiIqLyElYREVF5CauIiKi8hFVE\ntFb9jtsRLZWwioiIyhvXYSVprqQ9B+gzr9x8sWf7FEnvaF91ERHRrHEdVrbPsH3HEDefAiSsIiIq\nYEyElaSPSPpQWT5f0nVl+S2SLpZ0mKSbJS2TdJmkCWX9Qkm1sny6pLsk3Srp25K+3nCIN0r6taT7\nGmZZnwcOlrRc0odH8OVGREQPYyKsgBuBg8tyDZggafPSthL4BHCo7X2ADuCcxo0lvRT4JLA/cCAw\ntcf+dwQOAo6iHlIAHwVutD3N9vktf0UREdG0sRJWncB0SS8E1gE3Uw+tg4H/B+wJLJa0HDgZeHmP\n7fcDbrD9mO1ngct6rP+x7efKKcOXNFuUpFmSOiR1dHV1DemFRUTEwMbEbe1tPyvpfuAU4NfUZ1Nv\nBl4B3A9cY/ukYRxiXcNy09fd2p4DzAGo1WoexvEjIqIfY2VmBfVTgbOBRWX5vcBtwBLgQEmvAJC0\njaRX9th2KfAmSRMlbQYc18TxngS2bVXxERExdGMtrHYEbrb9CPA09feUuqjPuC6RtJL6KcIN3pOy\n/RDwL8CtwGLgAeCJAY63ElgvaUUusIiIGF2yN46zV5Im2F5bZlYLgO/aXtCq/ddqNXd0dLRqdxFj\nlwQbye+VGB5JnbZrzfQdSzOr4fp0uQBjNfX3uX48yvVERESTxsQFFq1ge/Zo1xCxUcisKtpgY5pZ\nRUTEGJWwioiIyktYRURE5SWsIiKi8hJWERFReQmriIiovIRVRERUXsIqIiIqL2EVERGVl7CKiIjK\nS1hFRETlbTSfDdh2nZ31T5uOiHw+YLRcZlYREVF5YzasJP1c0vYD9DlX0qGD3O8HJN0jyZImDa/K\niIhohTF3GlCSqN808siB+tr+1BAOsRi4Elg4hG0jIqINKjmzknSOpNXl62xJUyStkXQR9Zsn7izp\nge6Zj6RPlvU3SbpE0uzSPk/SzLL8gKTPSFomaZWkqb0d2/Ztth8YoZcaERFNqFxYSZoOnAq8Htgf\nOBOYCOwBfMP2XrYfbOi/L3AcsDdwBNDfLZIftb0P8E0gN2OMiBgjKhdWwEHAAttP2V4LzAcOBh60\nvaSX/gcCP7H9tO0ngZ/2s+/55bETmDLcQiXNktQhqaNruDuLiIg+VTGs+vJUC/axrjyup7xfJ+kq\nScslzR3szmzPsV2zXZvcguIiIqJ3VQyrG4EZkraWtA1wbGnry2Lg7ZK2kjQBOGowB7N9uO1pts8Y\neskREdFOlQsr28uAecCtwC3AXODxfvovBa4AVgK/AFYBTwz1+JI+JOm3wMuAlUOZcUVERGvJ4+Av\nzSVNsL1W0tbAImBWCb0RU5PcMZIHjKiycfB7JdpPUqft/i6Ke96Y+zurPsyRtCewFXDhSAdVRES0\n17gIK9vvGO0amD4dOjK3iohoh8q9ZxUREdFTwioiIiovYRUREZWXsIqIiMpLWEVEROWNi7+zqgJJ\nXcCDwCTg0VEupy+pbfCqWhektqFKbUPTjtpebrupT6tLWLWYpI5m/8htpKW2watqXZDahiq1Dc1o\n15bTgBERUXkJq4iIqLyEVevNGe0C+pHaBq+qdUFqG6rUNjSjWlves4qIiMrLzCoiIiovYTUEko6X\ndLuk5yT1enWMpJ0lXS/pjtL3rIZ1n5b0ULlD8XJJR45kbaXf2yStkXSPpI82tO8q6ZbS/gNJW7So\nrh0kXSPp7vI4sZc+b24Yk+WSnpY0o6ybJ+n+hnXTWlFXs7WVfusbjn9FQ3tbxqzZ2iRNk3Rz+b6v\nlHRCw7qWj1tfPzsN67cs43BPGZcpDes+VtrXSDp8uLUMsq5zyr/HlZJ+JenlDet6/d6OYG2nSOpq\nqOGMhnUnl+//3ZJOHoXazm+o6y5Jf2xY19Zx24DtfA3yC/hb4FXAQqDWR58dgX3K8rbAXcCe5fmn\ngdmjWNumwL3AbsAWwIqG2n4InFiWLwDe16K6vgh8tCx/FPjCAP13AB4Dti7P5wEz2zRmTdUGrO2j\nvS1j1mxtwCuBPcryS4GHge3bMW79/ew09PnvwAVl+UTgB2V5z9J/S2DXsp9NR7CuNzf8PL2vu67+\nvrcjWNspwNd72XYH4L7yOLEsTxzJ2nr0/yDw3ZEYt55fmVkNge07ba8ZoM/DLvfVsv0kcCewUxVq\nA/YD7rF9n+1ngEuBYyQJeAtweel3ITCjRaUdU/bX7H5nAr+w/ecWHb8/g63teW0es6Zqs32X7bvL\n8v8Ffg809YeWQ9Drz04/NV8OvLWM0zHApbbX2b4fuKfsb0Tqsn19w8/TEup3Ax8JzYxZXw4HrrH9\nmO3HgWuAt41ibScBl7Tw+E1LWI2AchrkdcAtDc0fKKcjvtvXaac22gn4z4bnvy1tLwL+aPu/erS3\nwktsP1yWfwe8ZID+J/LX/yjOK2N2vqQtW1TXYGrbSlKHpCXdpydp75gNpjYAJO1H/X/I9zY0t3Lc\n+vrZ6bVPGZcnqI9TM9u2s65GpwO/aHje2/e2VZqt7bjyfbpc0s6D3LbdtVFOm+4KXNfQ3M5x28C4\nuPliO0i6FvibXlZ93PZPBrGfCcCPgLNt/6k0fxP4Z8Dl8d+A00a6tlbrr67GJ7Ytqc/LUCXtCLwG\nuKqh+WPUf1lvQf0S2v8FnDvCtb3c9kOSdgOuk7SK+i/iYWnxuH0fONn2c6V5WOM2Hkl6F1AD3tTQ\n/FffW9v39r6HtvgpcIntdZLeQ31m+pYRPH4zTgQut72+oW3Exi1h1Qfbhw53H5I2px5UF9ue37Dv\nRxr6fBu4coRrewjYueH5y0rbH4DtJW1W/kfc3T7suiQ9ImlH2w+XX6q/72dX/wAssP1sw767Zxfr\nJH0PmN1sXa2qzfZD5fE+SQupz5Z/xDDGrFW1SXoh8DPq/2FZ0rDvYY1bL/r62emtz28lbQZsR/1n\nq5lt21kXkg6l/p+AN9le193ex/e2Vb90B6zN9h8ans6l/l5l97aH9Nh2YYvqaqq2BicC729saPO4\nbSCnAduknKP/DnCn7S/3WLdjw9NjgdUjWRuwFNhD9avYtqD+Q3iF6++YXk/9/SKAk4FWzdSuKPtr\nZr9/dV68e8zKuM6gtWM2YG2SJnafQpM0CTgQuKPNY9ZsbVsAC4CLbF/eY12rx63Xn51+ap4JXFfG\n6QrgRNWvFtwV2AO4dZj1NF2XpNcB3wKOtv37hvZev7ctqqvZ2hp/JxxN/T1uqJ9dOKzUOBE4jA3P\nOLS9tlLfVOoXeNzc0NbucdvQSF3JMZ6+qAfMb4F1wCPAVaX9pcDPy/JB1E/zrQSWl68jy7rvA6vK\nuiuAHUeytvL8SOpXKN5L/X/j3e27Uf8Fcg9wGbBli+p6EfAr4G7gWmCH0l4D5jb0m0L9f3ab9Nj+\nujJmq4F/Bya0cMwGrA14Qzn+ivJ4ervHbBC1vQt4tuHnbDkwrV3j1tvPDvVTi0eX5a3KONxTxmW3\nhm0/XrZbAxzRqnFqsq5ry7+J7jG6YqDv7QjW9jng9lLD9cDUhm1PK2N5D3DqSNdWnn8a+HyP7do+\nbo1f+QSLiIiovJwGjIiIyktYRURE5SWsIiKi8hJWERFReQmriIiovIRVRERUXsIqIiIqL2EVERGV\n9/8BZyinPcYlPa8AAAAASUVORK5CYII=\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x7f7ee6989748>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "#L1 (Lasso) Regularization\n",
+    "import sklearn\n",
+    "from sklearn.linear_model import Lasso\n",
+    "\n",
+    "# Create linear regression\n",
+    "regressor = Lasso(random_state=0,alpha=0.1)\n",
+    "\n",
+    "# Fit/train LASSO\n",
+    "regressor.fit(x_train,y_train)\n",
+    "# Predict\n",
+    "pred = regressor.predict(x_test)\n",
+    "\n",
+    "# Measure RMSE error.  RMSE is common for regression.\n",
+    "score = np.sqrt(metrics.mean_squared_error(pred,y_test))\n",
+    "print(\"Final score (RMSE): {}\".format(score))\n",
+    "\n",
+    "names = list(df.columns.values)\n",
+    "names.remove(\"mpg\")\n",
+    "report_coef(\n",
+    "  names,\n",
+    "  regressor.coef_,\n",
+    "  regressor.intercept_)\n"
+   ]
   }
  ],
  "metadata": {
