--- a/Regularization.ipynb
+++ b/Regularization.ipynb
@@ -348,6 +348,141 @@
     "  regressor.coef_,\n",
     "  regressor.intercept_)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Final score (RMSE): 2.9413154427467028\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>coef</th>\n",
+       "      <th>positive</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>origin-1</th>\n",
+       "      <td>-1.420925</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>cylinders</th>\n",
+       "      <td>-0.409651</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>horsepower</th>\n",
+       "      <td>-0.007524</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>weight</th>\n",
+       "      <td>-0.007473</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>displacement</th>\n",
+       "      <td>0.024128</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>acceleration</th>\n",
+       "      <td>0.137985</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>origin-3</th>\n",
+       "      <td>0.619104</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>year</th>\n",
+       "      <td>0.800769</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>origin-2</th>\n",
+       "      <td>0.801821</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  coef positive\n",
+       "origin-1     -1.420925    False\n",
+       "cylinders    -0.409651    False\n",
+       "horsepower   -0.007524    False\n",
+       "weight       -0.007473    False\n",
+       "displacement  0.024128     True\n",
+       "acceleration  0.137985     True\n",
+       "origin-3      0.619104     True\n",
+       "year          0.800769     True\n",
+       "origin-2      0.801821     True"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Intercept: [-18.23057194]\n"
+     ]
+    },
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAasAAAD8CAYAAADJ7YuWAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAGstJREFUeJzt3Xu0XWV97vHvw6UiBAElUkTiVkBTUEnJAkEuRU3xUtQg\nMBCtFRCijioqJ5xhh0ILlXrrqXrsQRqjBs6xqGgQRGpANAQCkewdckPEC5dWBtqNIiVYLobn/LHe\njYvtvqzsy1rv3nk+Y2Tsud75znf+1hw7efLONdecsk1ERETNtul2AREREaNJWEVERPUSVhERUb2E\nVUREVC9hFRER1UtYRURE9RJWERFRvYRVRERUL2EVERHV267bBUwXu+++u3t6erpdRkTElNHX13e/\n7Znt9E1YTZCenh56e3u7XUZExJQh6Z52++Y0YEREVC9hFRER1UtYRURE9RJWERFRvVxgEREdJXW7\ngpgonXwcYmZWERFRvYRVRERUb8qGlaSrJe06Sp/zJc3bwnG/LOkOSRslfVHS9uOrNCIixmvKhZWa\ntrH9Otu/Gamv7XNtf3cLd/FlYDbwEuDpwOljLDUiIiZIlWEl6awys9ko6f2Sesps5xJgI7C3pLsl\n7V76n1PW3yjpUkkLS/sSSSeU5bslnSdpjaQNkmYPtW/bV7sAbgGe25l3HRERw6kurCTNBU4FXgYc\nCpwB7AbsB1xo+wDb97T0Pxg4HjgQeC3QGGH4+20fBHwOWDhKHdsDbwO+M0KfBZJ6JfX29/e38/Yi\nImIMqgsr4AjgctsP294ELAWOBO6xvWqI/ocDV9h+xPZDwLdGGHtp+dkH9IxSx4XACts3DNfB9iLb\nDduNmTPbuhdjRESMQY1hNZyHJ2CMR8vPzZTvmElaJmmtpMUDnST9LTATOGsC9hkREeNUY1jdAMyX\ntKOknYDjSttwVgKvl7SDpBnAsVuyM9uvtj3H9ukAkk4HXg2cbPuJsb2FiIiYSNXdwcL2GklLaF7c\nALAYeGCE/qslXQmsB34JbAAeHEcJFwH3ADer+VX7pbbPH8d4ERExTnIn75cxSSTNsL1J0o7ACmCB\n7TWdrKHRaDjPs4oYXW63NH2MNz4k9dke6aK4J1U3sxqjRZL2B3YALu50UEVE+6bB/4+jC6ZFWNl+\nS7driIiIyVPjBRYRERFPkbCKiIjqJawiIqJ6CauIiKhewioiIqqXsIqIiOolrCIionoJq4iIqF7C\nKiIiqpewioiI6iWsIiKietPi3oARMXXkruvTRydvSpyZVUREVC9hFRER1UtYtUnStt2uISJiazUt\nw0rS+ZLe3/L6Aknvk3S2pNWS1ks6r2X9NyX1SbpN0oKW9k2S/pekdcBhHX4bERFRTMuwAr4I/BWA\npG2ANwO/APYDDgHmAHMlHVX6n2Z7LtAAzpT0rNK+E/AD2wfavrGTbyAiIn5vWl4NaPtuSb+S9KfA\nHsCtwMHAMWUZYAbN8FpBM6COK+17l/ZfAZuBbwy3nzILWwAwa9asSXgnEREB0zSsisXAKcAf05xp\nvQr4qO1/ae0k6WhgHnCY7d9KWg7sUFY/YnvzcDuwvQhYBNBoNDp4EWdExNZlup4GBLgceA3NGdWy\n8uc0STMAJO0l6dnALsADJahmA4d2q+CIiBjatJ1Z2X5M0veB35TZ0TWS/gS4Wc1vJW4C/hL4DvAu\nSbcDdwCrulVzREQMbdqGVbmw4lDgxIE2258BPjNE99cONYbtGZNTXUREbIlpeRpQ0v7AT4HrbP+k\n2/VERMT4TMuZle0fAi/odh0R8Yc6eT+5mD6m5cwqIiKml4RVRERUL2EVERHVS1hFRET1ElYREVG9\nhFVERFQvYRUREdVLWEVERPUSVhERUb2EVUREVC9hFRER1ZuW9waMiHo1n9ATk2k63n8xM6uIiKje\nlA4rSVdL2nWUPudLmreF435B0jpJ6yV9feDpwhER0R1TMqzUtI3t19n+zUh9bZ9r+7tbuIsP2D7Q\n9kuBfwfeM+ZiIyJi3KoNK0lnSdpY/rxfUo+kOyRdAmwE9pZ0t6TdS/9zyvobJV0qaWFpXyLphLJ8\nt6TzJK2RtEHS7KH2bfu/Sn8BTwem4RngiIipo8qwkjQXOBV4Gc1H058B7AbsB1xo+wDb97T0Pxg4\nHjiQ5iPqGyMMf7/tg4DPAQtHqOFLwC+A2cBnx/WGIiJiXKoMK+AI4HLbD9veBCwFjgTusb1qiP6H\nA1fYfsT2Q8C3Rhh7afnZB/QM18n2qcBzgNuBk4bqI2mBpF5Jvf39/aO9p4iIGKNaw2o4D0/AGI+W\nn5spl+5LWiZpraTFrR1tbwa+QnPW9gdsL7LdsN2YOXPmBJQWERFDqTWsbgDmS9pR0k7AcaVtOCuB\n10vaoVy5d+yW7Mz2q23PsX16uXhjX3jyM6s3AD8a29uIiIiJUOWXgm2vkbQEuKU0LQYeGKH/aklX\nAuuBXwIbgAfHuHsBF0t6RlleB7x7jGNFRMQEkKfJV50lzbC9SdKOwApgge01ndp/o9Fwb29vp3YX\nMWXlDhaTb6r8sy6pz/ZIF8Q9qcqZ1RgtkrQ/sANwcSeDKiIiJte0CSvbb+l2DRExuqnyv/6oS60X\nWERERDwpYRUREdVLWEVERPUSVhERUb2EVUREVC9hFRER1UtYRURE9RJWERFRvYRVRERUL2EVERHV\nS1hFRET1ps29ASNiapjou67nXoNbh8ysIiKielWGlaTlktp6xkkbY80vjw4ZeH2+pHkTMXZERHRG\nlWG1pSRtO8Lq+cCTYWX7XNvfnfyqIiJioowrrCR9U1KfpNskLShtr5G0RtI6SdeVthmSviRpg6T1\nko4v7cdIurn0v0zSjCH2MWQfSXdL+rikNcCJks6QtLrs9xuSdpT0cuANwCclrZW0j6Qlkk4oY7xK\n0q2lri9KelrL2OeVfW6QNHs8xykiIsZnvDOr02zPBRrAmZL2AD4PHG/7QODE0u8c4EHbL7H9UuB7\nknYHPgzMs30Q0Auc1Tp4G31+Zfsg218Blto+uOz3duAdtm8CrgTOtj3H9s9axt4BWAKcZPslNC82\neXfL2PeXfX4OWDjO4xQREeMw3qsBz5R0XFneG1gArLB9F4DtX5d184A3D2xk+wFJx9I8PbdSzcuD\n/gi4edD4h47S56styy+W9BFgV2AGsGyU2l8E3GX7x+X1xcBfA58ur5eWn33Am4YaoMwmFwDMmjVr\nlN1FRMRYjTmsJB1NM4QOs/1bScuBtUC7p8wEXGv75HH0ebhleQkw3/Y6SacAR7dZx3AeLT83M8xx\nsr0IWATQaDRyAW1ExCQZz2nAXYAHSlDNpjkL2gE4StLzASQ9s/S9luashdK+G7AKOFzSvqVtJ0kv\nHLSPdvoM2Bm4T9L2wFtb2h8q6wa7A+gZGBt4G3B9G+87IiI6bDxh9R1gO0m3Ax+jGSz9NE+LLZW0\njt+fpvsIsJukjaX9Fbb7gVOASyWtp3l67ymzsnb6tDgH+AGwEvhRS/tXgLPLhRT7tIz9CHAqcJmk\nDcATwEVjORARETG55Hz9e0I0Gg339vZ2u4yI6uUOFjFAUp/ttr5TOy2+ZxUREdNb7g0YER2VmVCM\nRWZWERFRvYRVRERUL2EVERHVS1hFRET1ElYREVG9hFVERFQvYRUREdVLWEVERPUSVhERUb2EVURE\nVC9hFRER1cu9ASOiowbfdT33Cox2ZGYVERHV2+KZlaS/AzYBzwBW2P7uFm5/NLDQ9rFbuu9OkzQf\n+LHtH3a7loiIrdmYZ1a2z93SoJqC5gP7d7uIiIitXVthJelDkn4s6UbgRaVtiaQTyvLHJP1Q0npJ\n/9iy/iJJvWXbP5hJSTpE0s3lkfM3SRoYe1tJ/yhpYxnzvaV9rqTrJfVJWiZpz9K+XNKnyr5ul3Sw\npKWSfiLpIy37+0tJt0haK+lfJG1b2jdJukDSOkmrJO0h6eXAG4BPlv77jOM4R0TEOIx6GlDSXODN\nwJzSfw3Q17L+WcBxwGzblrRry+Y9wCHAPsD3Je07aPgfAUfa/p2kecA/AMcDC8q2c8q6Z0raHvgs\n8Ebb/ZJOAi4ATitjPWa7Iel9wBXAXODXwM8kfQp4NnAScLjtxyVdCLwVuATYCVhl+0OSPgGcYfsj\nkq4ErrL99dGOU0RETJ52PrM6Erjc9m8Byj/grR4EHgG+IOkq4KqWdV+z/QTwE0l3ArMHbbsLcLGk\n/QAD25f2ecBFtn8HYPvXkl4MvBi4Vs3LibYF7msZa6CuDcBttu8r9d4J7A0cQTPAVpftnw78Z9nm\nsZa6+4A/b+O4IGkBzWBl1qxZ7WwSERFjMO5L18vM5xDgVcAJwHuAVw6sHtx90Ou/B75v+zhJPcDy\nEXYlmiF02DDrHy0/n2hZHni9Xdn+Ytt/M8S2j9tPXkC7mTaPi+1FwCKARqORC3AjIiZJO59ZrQDm\nS3q6pJ2B17eulDQD2MX21cAHgANbVp8oaZvyec8LgDsGjb0LcG9ZPqWl/VrgnZK2K/t4Ztl2pqTD\nStv2kg5oo/4B1wEnSHr2wJiSnjfKNg8BO2/BPiIiYhKMGla21wBfBdYB/wasHtRlZ+AqSeuBG4Gz\nWtb9O3BL2e5dth8ZtO0ngI9KupWnzmYWl23XS1oHvMX2YzRnbh8vbWuBl7f1Lpvv44fAh4FrSq3X\nAnuOstlXgLPLBSC5wCIiokvkSfr6uKQlbEUXJzQaDff29na7jIjq5Q4WMUBSn+1GO31zB4uIiKje\npN0b0PYpkzV2RExdmUnFWGRmFRER1UtYRURE9RJWERFRvYRVRERUL2EVERHVS1hFRET1ElYREVG9\nhFVERFQvYRUREdVLWEVERPUSVhERUb2EVUR0zuBbrke0KWEVERHVS1hFRET1pnVYSVosaf9R+iyR\ndMIQ7T2S3jJ51UVERLumdVjZPr08zn4seoCEVUREBaZEWEk6W9KZZflTkr5Xll8p6cuSjpF0s6Q1\nki6TNKOsXy6pUZbfIenHkm6R9HlJ/9yyi6Mk3STpzpZZ1seAIyWtlfSBDr7diIgYZEqEFXADcGRZ\nbgAzJG1f2tYDHwbm2T4I6AXOat1Y0nOAc4BDgcOB2YPG3xM4AjiWZkgBfBC4wfYc258aqihJCyT1\nSurt7+8f51uMiIjhTJWw6gPmSnoG8ChwM83QOhL4b2B/YKWktcDbgecN2v4Q4Hrbv7b9OHDZoPXf\ntP1EOWW4R7tF2V5ku2G7MXPmzDG9sYiIGN123S6gHbYfl3QXcApwE83Z1CuAfYG7gGttnzyOXTza\nspwvgkREVGaqzKygeSpwIbCiLL8LuBVYBRwuaV8ASTtJeuGgbVcDfyZpN0nbAce3sb+HgJ0nqviI\niBi7qRZWewI32/4l8AjNz5T6ac64LpW0nuYpwqd8JmX7XuAfgFuAlcDdwIOj7G89sFnSulxgERHR\nXbLd7Ro6QtIM25vKzOpy4Iu2L5+o8RuNhnt7eydquIjpSYKt5N+cGJ2kPtuNdvpOpZnVeP1duQBj\nI83Pub7Z5Xoitj4JqhijKXGBxUSwvbDbNURExNhsTTOriIiYohJWERFRvYRVRERUL2EVERHVS1hF\nRET1ElYREVG9hFVERFQvYRUREdVLWEVERPUSVhERUb2EVUR0jvK4uBibhFVERFQvYRUREdWbkLCS\n1CNp40SMFRERMVjXZ1blYYjVmyp1RkRMRxMZVttK+ryk2yRdI+npkuZIWiVpvaTLJe0GIGm5pE9L\n6gXeJ+lESRvLI+RXlD7bSvqkpNVl+3eW9qMlrZD0bUl3SLpI0jZl3cmSNpSxPl7aTpT0T2X5fZLu\nLMsvkLSyLM+VdL2kPknLJO05VJ0TeKwiImILTORsYT/gZNtnSPoacDzwP4H32r5e0vnA3wLvL/3/\naOBxxpI2AK+2fa+kXcv6dwAP2j5Y0tOAlZKuKesOAfYH7gG+A7xJ0k3Ax4G5wAPANZLmAzeUOgCO\nBH4laa+yvELS9sBngTfa7pd0EnABcNrgOgeTtABYADBr1qyxHreIiBjFRIbVXbbXluU+YB9gV9vX\nl7aLgcta+n+1ZXklsKSE3NLSdgzwUkknlNe70AzEx4BbbA/MkC4FjgAeB5bb7i/tXwaOsv1NSTMk\n7QzsDfwrcBTNsFoKvAh4MXCtmpfVbgvcN0ydT2F7EbAIoNFo5HndERGTZCLD6tGW5c3ArsN1LB4e\nWLD9LkkvA/4C6JM0FxDNWdmy1o0kHQ0MDobRguIm4FTgDpozrdOAw4D/AcwCbrN92Gh1RkREd0zm\nBRYPAg9IOrK8fhtw/VAdJe1j+we2zwX6ac6AlgHvLqfpkPRCSTuVTQ6R9PzyWdVJwI3ALcCfSdpd\n0rbAyS37uwFYCKwAbgVeATxq+0GaATZT0mFlP9tLOmDiDkNERIzXZF/h9nbgIkk7AnfSnN0M5ZOS\n9qM5m7oOWAesB3qANWqen+sH5pf+q4F/BvYFvg9cbvsJSR8srwV82/YVpf8NNANwhe3Nkv4D+BGA\n7cfKqcb/LWkXmsfk08BtE3QMIiJinGRPrY9aymnAhbaP7XYtrRqNhnt7e7tdRkTdJJhi/+bE5JHU\nN9wFbIN1/XtWEbEVSVDFGE25L7raXg4s73IZERHRQZlZRURE9RJWERFRvYRVRERUL2EVERHVS1hF\nRET1ElYREVG9hFVERFQvYRUREdVLWEVERPUSVhERUb2EVUREVG/K3RswYtpqPql6+svNbGMMMrOK\niIjqTYmwkrSkPCARSYsl7b+F22+anMoiIqITptxpQNunT+b45anEsv3EZO4nIiLa19WZlaS/krRe\n0jpJl0u6S9L2Zd0zWl+3bLNcUqMsb5J0Qdl+laQ9SvvzJd0saYOkjwza/mxJq8t+zyttPZLukHQJ\nsBHYu8zmNpYxPtCJ4xEREUPrWlhJOgD4MPBK2wcC76D5UMW/KF3eDCy1/fgIw+wErCrbrwDOKO2f\nAT5n+yXAfS37PAbYDzgEmAPMlXRUWb0fcKHtA4Ddgb1sv7iM8aXxvt+IiBi7bs6sXglcZvt+ANu/\nBhYDp5b1pzJ6SDwGXFWW+4Cesnw4cGlZ/r8t/Y8pf24F1gCzaYYUwD22V5XlO4EXSPqspNcA/zXU\nziUtkNQrqbe/v3+UUiMiYqyqusDC9kqgR9LRwLa2N46yyeP2k9fBbuapn8ENdX2sgI/anlP+7Gv7\nC2Xdwy11PAAcSHOm9y6aITpUvYtsN2w3Zs6cOUqpERExVt0Mq+8BJ0p6FoCkZ5b2S4B/ZXyn3lbS\nPI0I8NaW9mXAaZJmlH3uJenZgzeWtDuwje1v0DxVedA4aomIiHHqWljZvg24ALhe0jrgn8qqLwO7\n8fvTeGPxPuCvJW0A9mrZ5zU0g/Dmsu7rwM5DbL8XsFzSWuD/AX8zjloiImKc5Mq+TV6+T/VG22/r\ndi1botFouLe3t9tlxFSWO1jEVkZSn+1GO32r+p6VpM8CrwVe1+1aIiKiHlWFle33druGiK7JjCNi\nWFVdDRgRETGUhFVERFQvYRUREdVLWEVERPUSVhERUb2EVUREVC9hFRER1UtYRURE9RJWERFRvYRV\nRERUL2EVERHVq+regFNaX9/Wc9fsiPHIPRBjDDKzioiI6k3ZsJJ0taRdR+lzvqR5WzjueyT9VJLL\nE4MjIqLLptxpQEmi+dDIUZ95ZfvcMexiJXAVsHwM20ZExCSocmYl6SxJG8uf90vqkXSHpEuAjcDe\nku4emPlIOqesv1HSpZIWlvYl5cnDlP7nSVojaYOk2UPt2/attu/u0FuNiIg2VBdWkuYCpwIvAw4F\nzgB2A/YDLrR9gO17WvofDBwPHEjzKcMjPSL5ftsHAZ8DFk7OO4iIiIlWXVgBRwCX237Y9iZgKXAk\ncI/tVUP0Pxy4wvYjth8CvjXC2EvLzz6gZ7yFSlogqVdSb/94B4uIiGHVGFbDeXgCxni0/NxM+bxO\n0jJJayUt3tLBbC+y3bDdmDkBxUVExNBqDKsbgPmSdpS0E3BcaRvOSuD1knaQNAM4dkt2ZvvVtufY\nPn3sJUdExGSqLqxsrwGWALcAPwAWAw+M0H81cCWwHvg3YAPw4Fj3L+lMST8HngusH8uMKyIiJpY8\nDb5NLmmG7U2SdgRWAAtK6HVMQ3JvJ3cYMVVNg39zYmJI6rM90kVxT5py37MaxiJJ+wM7ABd3Oqgi\nImJyTYuwsv2WbtfA3LnQm7lVRMRkqO4zq4iIiMESVhERUb2EVUREVC9hFRER1UtYRURE9abF96xq\nIKkfuGfUjtPH7sD93S6iYjk+w8uxGdnWdHyeZ7utu9UlrGJMJPW2+2W+rVGOz/BybEaW4zO0nAaM\niIjqJawiIqJ6CasYq0XdLqByOT7Dy7EZWY7PEPKZVUREVC8zq4iIqF7CKtoi6URJt0l6QtKwVypJ\neo2kOyT9VNIHO1ljN0l6pqRrJf2k/NxtmH6by5Op10q6stN1dtJovwuSnibpq2X9DyT1dL7K7mnj\n+Jwiqb/l92WrfkBswiratRF4E83nhQ1J0rbA/wFeC+wPnFwe3bI1+CBwne39gOvK66H8d3ky9Rzb\nb+hceZ3V5u/CO4AHbO8LfAr4eGer7J4t+Lvy1Zbfl636QbAJq2iL7dtt3zFKt0OAn9q+0/ZjwFeA\nN05+dVV4I3BxWb4YmN/FWmrQzu9C6zH7OvAqSepgjd20Nf9dGZOEVUykvYD/aHn989K2NdjD9n1l\n+RfAHsP020FSr6RVkqZzoLXzu/BkH9u/Ax4EntWR6rqv3b8rx0taL+nrkvbuTGl1mhYPX4yJIem7\nwB8PsepDtq/odD21Gen4tL6wbUnDXWb7PNv3SnoB8D1JG2z/bKJrjWnhW8Clth+V9E6as9BXdrmm\nrklYxZNszxvnEPcCrf/7e25pmxZGOj6SfilpT9v3SdoT+M9hxri3/LxT0nLgT4HpGFbt/C4M9Pm5\npO2AXYBfdaa8rhv1+NhuPRaLgU90oK5q5TRgTKTVwH6Sni/pj4A3A9P6ircWVwJvL8tvB/5gJipp\nN0lPK8u7A4cDP+xYhZ3Vzu9C6zE7Afiet54vfo56fMp/ega8Abi9g/VVJ2EVbZF0nKSfA4cB35a0\nrLQ/R9LV8OTnDu8BltH8i/U127d1q+YO+xjw55J+Aswrr5HUkDRwFdefAL2S1gHfBz5me1qG1XC/\nC5LOlzRwFeQXgGdJ+ilwFsNfQTnttHl8zixfF1kHnAmc0p1q65A7WERERPUys4qIiOolrCIionoJ\nq4iIqF7CKiIiqpewioiI6iWsIiKiegmriIioXsIqIiKq9/8B5/3fVk2nq0cAAAAASUVORK5CYII=\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x7f7ee69d59e8>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "#L2 (Ridge) Regularization\n",
+    "import sklearn\n",
+    "from sklearn.linear_model import Ridge\n",
+    "\n",
+    "# Create linear regression\n",
+    "regressor = Ridge(alpha=1)\n",
+    "\n",
+    "# Fit/train Ridge\n",
+    "regressor.fit(x_train,y_train)\n",
+    "# Predict\n",
+    "pred = regressor.predict(x_test)\n",
+    "\n",
+    "# Measure RMSE error.  RMSE is common for regression.\n",
+    "score = np.sqrt(metrics.mean_squared_error(pred,y_test))\n",
+    "print(\"Final score (RMSE): {}\".format(score))\n",
+    "\n",
+    "names = list(df.columns.values)\n",
+    "names.remove(\"mpg\")\n",
+    "report_coef(\n",
+    "  names,\n",
+    "  regressor.coef_[0,:],\n",
+    "  regressor.intercept_)"
+   ]
   }
  ],
  "metadata": {
