--- a/Regularization.ipynb
+++ b/Regularization.ipynb
@@ -626,20 +626,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'encode_text_index' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-14-4e848f0ede45>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     21\u001b[0m \u001b[0mencode_numeric_zscore\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'sepal_w'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m \u001b[0mencode_numeric_zscore\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'sepal_l'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 23\u001b[0;31m \u001b[0mspecies\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mencode_text_index\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\"species\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     24\u001b[0m \u001b[0mnum_classes\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mspecies\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     25\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'encode_text_index' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Final accuracy: 0.9473684210526315\n"
      ]
     }
    ],
@@ -647,7 +643,9 @@
     "############################################\n",
     "# TensorFlow with Dropout for Classification\n",
     "############################################\n",
+    "\n",
     "import os\n",
+    "from sklearn import preprocessing\n",
     "import pandas as pd\n",
     "from sklearn.model_selection import train_test_split\n",
     "import tensorflow.contrib.learn as learn\n",
@@ -660,6 +658,12 @@
     "    \n",
     "filename = os.path.join(path,\"iris.csv\")    \n",
     "df = pd.read_csv(filename,na_values=['NA','?'])\n",
+    "\n",
+    "def encode_text_index(df,name):\n",
+    "    le = preprocessing.LabelEncoder()\n",
+    "    df[name] = le.fit_transform(df[name])\n",
+    "    return le.classes_\n",
+    "\n",
     "\n",
     "# Encode feature vector\n",
     "encode_numeric_zscore(df,'petal_w')\n",
@@ -677,7 +681,7 @@
     "# Split into train/test\n",
     "x_train, x_test, y_train, y_test = train_test_split(    \n",
     "    x, y, test_size=0.25, random_state=45) \n",
-    "    # as much as I would like to use 42, it gives a perfect result, and a boring confusion matrix!\n",
+    "    \n",
     "    \n",
     "# Get/clear a directory to store the neural network to\n",
     "model_dir = get_model_dir('iris',True)\n",
@@ -689,8 +693,6 @@
     "    config=tf.contrib.learn.RunConfig(save_checkpoints_secs=1),\n",
     "    hidden_units=[10, 20, 5], n_classes=num_classes, feature_columns=feature_columns)\n",
     "\n",
-    "# Might be needed in future versions of \"TensorFlow Learn\"\n",
-    "#classifier = learn.SKCompat(classifier) # For Sklearn compatibility\n",
     "\n",
     "# Early stopping\n",
     "validation_monitor = tf.contrib.learn.monitors.ValidationMonitor(\n",
@@ -709,6 +711,88 @@
     "pred = list(classifier.predict(x_test, as_iterable=True))\n",
     "score = metrics.accuracy_score(y_test, pred)\n",
     "print(\"Final accuracy: {}\".format(score))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Score (RMSE): 6.840972423553467\n"
+     ]
+    }
+   ],
+   "source": [
+    "########################################\n",
+    "# TensorFlow with Dropout for Regression\n",
+    "########################################\n",
+    "import tensorflow.contrib.learn as learn\n",
+    "import pandas as pd\n",
+    "import os\n",
+    "import numpy as np\n",
+    "import tensorflow as tf\n",
+    "from sklearn import metrics\n",
+    "from scipy.stats import zscore\n",
+    "\n",
+    "# Set the desired TensorFlow output level for this example\n",
+    "tf.logging.set_verbosity(tf.logging.ERROR)\n",
+    "\n",
+    "path = \"./data/\"\n",
+    "\n",
+    "filename_read = os.path.join(path,\"auto-mpg.csv\")\n",
+    "df = pd.read_csv(filename_read,na_values=['NA','?'])\n",
+    "\n",
+    "# create feature vector\n",
+    "missing_median(df, 'horsepower')\n",
+    "df.drop('name',1,inplace=True)\n",
+    "encode_numeric_zscore(df, 'horsepower')\n",
+    "encode_numeric_zscore(df, 'weight')\n",
+    "encode_numeric_zscore(df, 'cylinders')\n",
+    "encode_numeric_zscore(df, 'displacement')\n",
+    "encode_numeric_zscore(df, 'acceleration')\n",
+    "encode_text_dummy(df, 'origin')\n",
+    "\n",
+    "# Encode to a 2D matrix for training\n",
+    "x,y = to_xy(df,'mpg')\n",
+    "\n",
+    "# Split into train/test\n",
+    "x_train, x_test, y_train, y_test = train_test_split(\n",
+    "    x, y, test_size=0.25, random_state=42)\n",
+    "\n",
+    "# Get/clear a directory to store the neural network to\n",
+    "model_dir = get_model_dir('mpg',True)\n",
+    "\n",
+    "# Create a deep neural network with 3 hidden layers of 50, 25, 10\n",
+    "feature_columns = [tf.contrib.layers.real_valued_column(\"\", dimension=x.shape[0])]\n",
+    "regressor = learn.DNNRegressor(\n",
+    "    model_dir= model_dir, dropout = 0.2,  # the probability we will drop out a given coordinate.\n",
+    "    config=tf.contrib.learn.RunConfig(save_checkpoints_secs=1),\n",
+    "    feature_columns=feature_columns,\n",
+    "    hidden_units=[50, 25, 10])\n",
+    "\n",
+    "\n",
+    "# Early stopping\n",
+    "validation_monitor = tf.contrib.learn.monitors.ValidationMonitor(\n",
+    "    x_test,\n",
+    "    y_test,\n",
+    "    every_n_steps=500,\n",
+    "    early_stopping_metric=\"loss\",\n",
+    "    early_stopping_metric_minimize=True,\n",
+    "    early_stopping_rounds=50)\n",
+    "    \n",
+    "# Fit/train neural network\n",
+    "regressor.fit(x_train, y_train,monitors=[validation_monitor],steps=10000)\n",
+    "\n",
+    "# Predict and measure RMSE\n",
+    "pred = list(regressor.predict(x_test, as_iterable=True))\n",
+    "score = np.sqrt(metrics.mean_squared_error(pred,y_test))\n",
+    "print(\"Score (RMSE): {}\".format(score))"
    ]
   }
  ],
